--- a/abnreports.html
+++ b/abnreports.html
@@ -747,14 +747,16 @@
   let hasMoreData = true;
   let isLoadingMore = false;
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyA0YUIpIDh4WB4p1ewiNB0XfwHve0ByljU",
-    authDomain: "abnreport-fd733.firebaseapp.com",
-    projectId: "abnreport-fd733",
-    storageBucket: "abnreport-fd733.appspot.com",
-    messagingSenderId: "349748947315",
-    appId: "1:349748947315:web:010cb671d2a95bcf1f7d06"
-  };
+
+ const firebaseConfig = {
+  apiKey: "AIzaSyA0YUIpIDh4WB4p1ewiNB0XfwHve0ByljU",
+  authDomain: "abnreport-fd733.firebaseapp.com",
+  databaseURL: "https://abnreport-fd733-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "abnreport-fd733",
+  storageBucket: "abnreport-fd733.appspot.com", // ← ここを修正
+  messagingSenderId: "349748947315",
+  appId: "1:349748947315:web:010cb671d2a95bcf1f7d06"
+};
 
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
