--- a/abnreports.html
+++ b/abnreports.html
@@ -753,7 +753,7 @@
   authDomain: "abnreport-fd733.firebaseapp.com",
   databaseURL: "https://abnreport-fd733-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "abnreport-fd733",
-  storageBucket: "abnreport-fd733.appspot.com", // ← ここを修正
+  storageBucket: "abnreport-fd733.firebasestorage.app", // ← ここを修正
   messagingSenderId: "349748947315",
   appId: "1:349748947315:web:010cb671d2a95bcf1f7d06"
 };
