--- a/abnreports.html
+++ b/abnreports.html
@@ -758,6 +758,8 @@
   appId: "1:349748947315:web:010cb671d2a95bcf1f7d06"
 };
 
+ 
+
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
   const auth = getAuth(app);
@@ -1149,6 +1151,17 @@ document.addEventListener('click', (e)=>{
       deptSelect.appendChild(option);
     });
   }
+
+   const HEADER_MAP = {
+    '整理No':'serialNo','部署':'department','ライン名':'lineName','発生日':'occurrenceDate',
+    '発生時刻':'occurrenceTime','再開時刻':'restartTime','異常内容':'anomalyContent','対応内容':'actionTaken',
+    '遡り':'traceback','処置者':'handler','技術対応':'techRequest','技術対応区分':'techRequest',
+    '技術処置者':'techHandler','発見タイミング':'discoveryTiming','前回終物確認':'previousCheck',
+    '命数有無':'lifespan','命数到達':'lifespanReached','保全単位':'maintenanceUnit',
+    '技術対応内容':'rootCauseAction','再発新規':'recurrenceType','対策状況':'measureStatus',
+    '暫定':'affirmation','状態':'_statusText','停止時間(分)':'_stopMin','_id':'_id'
+  };
+  
 /* CSVインポート */
   function parseCSVLoose(text){
     const rows=[]; let cur=''; let row=[]; let inQuotes=false;
@@ -2459,6 +2472,17 @@ document.getElementById('edit_measureStatusGroup').style.display =
 
     })();
   }
+
+ // 編集モーダルでの再発/新規切り替え処理
+  document.getElementById('edit_recurrenceType').addEventListener('change', function(){
+    const group = document.getElementById('edit_measureStatusGroup');
+    if (this.value === '再発') {
+      group.style.display = 'block';
+    } else {
+      group.style.display = 'none';
+      document.getElementById('edit_measureStatus').value = '';
+    }
+  });
   document.addEventListener('change', (e)=>{
     if (e.target.id==='edit_department' && editMastersCache){
       const dep=e.target.value;
