--- a/abnreports.html
+++ b/abnreports.html
@@ -1922,7 +1922,7 @@ document.getElementById('manufacturingForm').addEventListener('submit', async (e
     isSubmittingMfg = false;
   }
 });
-  } catch (error) {
+   catch (error) {
     console.error('Form submission error:', error);
     alert(`登録に失敗しました。\nエラー: ${error.message}\n\nコードを確認してください: ${error.code || 'N/A'}`);
   }
