--- a/abnreports.html
+++ b/abnreports.html
@@ -1609,7 +1609,7 @@ ${problems.length?'\n一部エラー:\n'+problems.slice(0,10).join('\n'):''}`);
       const photosHtml = allPhotos.length ? `
         <div class="similar-photos">
           ${allPhotos.slice(0,8).map(u=>`
-           <div class="thumb" onclick="window.open('${u}','_blank')">
+            <div class="thumb" onclick="window.open('${u}','_blank')">
               <img src="${u}" alt="">
             </div>
           `).join('')}
@@ -2160,7 +2160,7 @@ ${(item.recurrenceType==='再発' && item.measureStatus) ?
               <div>
                 <div class="card-photos-compact">
                   ${allPhotos.slice(0,4).map(url => `
-                   <div class="photo-thumb-compact" data-photos="${item._id}">
+                    <div class="photo-thumb-compact" onclick="window.open('${url}','_blank')">
                       <img src="${url}" alt="">
                     </div>
                   `).join('')}
@@ -2765,7 +2765,7 @@ document.getElementById('btnEditSave').addEventListener('click', async () => {
       saveBtn.textContent = '画像削除中...';
       for (const url of editPhotosToDelete) {
         try {
-          await deleteObject(refFromURL(url));
+          await deleteObject(ref(storage, url));
           console.log('Deleted photo:', url);
         } catch (e) {
           console.log('Failed to delete photo:', e);
@@ -2840,14 +2840,14 @@ async function deleteRecord(id){
     if (item.mfgPhotoUrls && Array.isArray(item.mfgPhotoUrls)){
       item.mfgPhotoUrls.forEach(url => {
         deletePromises.push(
-          deleteObject(refFromURL(url)).catch(e => console.log('Failed to delete mfg photo:', e))
+          deleteObject(ref(storage, url)).catch(e => console.log('Failed to delete mfg photo:', e))
         );
       });
     }
     if (item.techPhotoUrls && Array.isArray(item.techPhotoUrls)){
       item.techPhotoUrls.forEach(url => {
         deletePromises.push(
-          deleteObject(refFromURL(url)).catch(e => console.log('Failed to delete tech photo:', e))
+          deleteObject(ref(storage, url)).catch(e => console.log('Failed to delete tech photo:', e))
         );
       });
     }
@@ -2954,12 +2954,12 @@ async function deleteRecord(id){
           ${item.mfgPhotoUrls?.length ? `
             <div style="margin-bottom:8px;color:#667eea;font-weight:bold;">製造部門</div>
             <div class="similar-photos">
-              ${item.mfgPhotoUrls.map(u=>`<div class="thumb" data-photos="${item._id}"><img src="${u}" alt=""></div>`).join('')}
+              ${item.mfgPhotoUrls.map(u=>`<div class="thumb" onclick="window.open('${u}','_blank')"><img src="${u}" alt=""></div>`).join('')}
             </div>`:''}
           ${item.techPhotoUrls?.length ? `
             <div style="margin:14px 0 8px;color:#f57c00;font-weight:bold;">技術部門</div>
             <div class="similar-photos">
-              ${item.techPhotoUrls.map(u=>`<div class="thumb" data-photos="${item._id}"><img src="${u}" alt=""></div>`).join('')}
+              ${item.techPhotoUrls.map(u=>`<div class="thumb" onclick="window.open('${u}','_blank')"><img src="${u}" alt=""></div>`).join('')}
             </div>`:''}
         </div>` : ''}
     `;
@@ -3043,13 +3043,7 @@ async function deleteRecord(id){
     await deleteDoc(doc(db,'masters','department','items', del.getAttribute('data-del-dept')));
     updateDepartmentList();
   });
-document.addEventListener('click', (e) => {
-  const holder = e.target.closest('[data-photos]');
-  if (holder) {
-    const id = holder.getAttribute('data-photos');
-    if (id) showPhotos(id);
-  }
-});
+
   async function updateLineManageList(){
     const dept=document.getElementById('lineManageDept').value;
     const list=document.getElementById('lineList'); 
