--- a/abnreports.html
+++ b/abnreports.html
@@ -453,7 +453,9 @@
             <label>写真</label>
             <div class="photo-upload" onclick="document.getElementById('mfgPhotos').click()">
               <div style="font-size:2rem;">📸</div><p>写真をアップロード（複数可）</p>
-              <input type="file" id="mfgPhotos" accept="image/*" multiple>
+
+             
+             <input type="file" id="mfgPhotos" accept="image/*" multiple>
             </div>
             <div id="mfgPhotoPreview" class="photo-preview"></div>
           </div>
@@ -1584,7 +1586,24 @@ ${problems.length?'\n一部エラー:\n'+problems.slice(0,10).join('\n'):''}`);
     }
     return Math.round((matches / maxLen) * 100);
   }
-  
+  function bindPhotoInputsOnce() {
+  const el1 = document.getElementById('mfgPhotos');
+  const el2 = document.getElementById('techPhotos');
+
+  // 既にバインド済みなら何もしない
+  if (el1 && !el1._photoBound) {
+    handlePhotoUpload('mfgPhotos','mfgPhotoPreview', mfgPhotos);
+    el1._photoBound = true;
+  }
+  if (el2 && !el2._photoBound) {
+    handlePhotoUpload('techPhotos','techPhotoPreview', techPhotos);
+    el2._photoBound = true;
+  }
+}
+
+// DOMできたら一回だけ
+window.addEventListener('DOMContentLoaded', bindPhotoInputsOnce);
+
   function findSimilarCandidates(base, limitN=10){
     if (!base) return [];
     let candidates = anomalyCache
