--- a/abnreports.html
+++ b/abnreports.html
@@ -2677,6 +2677,10 @@ function openEdit(id){
     
     modal.classList.add('active');
     modal.setAttribute('aria-hidden','false');
+     setTimeout(() => {
+    bindPhotoInputs(); // 写真入力フィールドを再バインド
+  }, 100);
+}
   })();
 }
 
@@ -2727,6 +2731,7 @@ function displayEditExistingPhotos(kind, urls) {
     if (t.matches('.edit-tab')){
       document.querySelectorAll('.edit-tab').forEach(x=>x.classList.remove('active'));
       t.classList.add('active');
+     const tab = t.dataset.editTab;
       document.getElementById('editMfg').style.display = t.dataset.editTab==='mfg'?'block':'none';
       document.getElementById('editTech').style.display= t.dataset.editTab==='tech'?'block':'none';
      document.getElementById('editPhotos').style.display = (tab==='photos')? 'block' : 'none';
